[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.14.13"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-logger = "=1.14.13"
solana-program-test = "=1.14.13"
solana-sdk = "=1.14.13"
solana-validator = "=1.14.13"

[lib]
crate-type = ["cdylib", "lib"]
